@@ -98,8 +98,7 @@ dir, it will get removed from the target.</p>
 
 <h4>fileset or any other resource collection</h4>
 <p><a href="../Types/resources.html#collection">Resource
-Collection</a>s are used to select groups of files to copy.  To use a
-resource collection, the <code>todir</code> attribute must be set.</p>
+Collection</a>s are used to select groups of files to copy.</p>
 <p>Prior to Ant 1.7 only <code>&lt;fileset&gt;</code> has been
 supported as a nested element.</p>
 
